infrastructure/api/gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  labels:
    istio.io/dataplane-mode: ambient
