infrastructure/api/gateway/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops-dashboard
  namespace: api-gateway
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "gitops.ripple-transfer.dev"
  rules:
    - backendRefs:
        - name: weave-gitops-dashboard
          namespace: flux-system
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: api-gateway
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "hubble.ripple-transfer.dev"
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
